--- a/responsiveWebDesign/1SurveyForm/styles.css
+++ b/responsiveWebDesign/1SurveyForm/styles.css
@@ -2,7 +2,7 @@ body{
     width: 100%;
     height: 100vh;
     margin: 0;
-    background-color: #292848;
+    background-color: #12606B;
     color: #f5f6f7;
     font-family: Tahoma;
     font-size: 16px;
@@ -42,7 +42,7 @@ fieldset{
 }
 
 button{
-    background-color:#37AF65;
+    background-color:#11B2B1;
     color: #f5f6f7;
     height: 30px;
     width:100%;
