--- a/responsiveWebDesign/3TechnicalDocumentationPage/styles.css
+++ b/responsiveWebDesign/3TechnicalDocumentationPage/styles.css
@@ -6,7 +6,7 @@ html{
 html, body {
     min-width: 290px;
     color: #4d4e53;
-    background-color: #ffffff;
+    background-color: #f0ddc4;
     font-family: 'Open Sans', Arial, sans-serif;
     line-height: 1.5;
 }
@@ -81,7 +81,6 @@ header {
 }
 @media only screen and (max-width:815px){
     #navbar{
-        background-color: white;
         position: absolute;
         top: 0;
         padding: 0;
